fix: small css error when item name wraps
temporary, need to come up with a permanent solution.

--- a/src/app/cards/item-card/item-card.component.scss
+++ b/src/app/cards/item-card/item-card.component.scss
@@ -7,7 +7,7 @@ $dark-green: #33692F;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
   margin: 4px;
   background: #433F3F;
   font-size: 80%;
